crates/org-parser/snapshots/org_rust_parser__element__table__tests__table_aligned_cells.snap
---
source: crates/org-parser/src/element/table.rs
expression: "$crate :: test_util :: snapshot_text(parser)"
---
"\n|one two |three|\n|s       |     |\n"
0..35 [1, 2]
  0..1 BlankLine
  1..35 Table { rows: 2, cols: 2, children: [7, 12], caption: None }
    1..18 Standard([4, 6])
      2..11 TableCell([3])
        2..10 "one two"
      11..17 TableCell([5])
        11..16 "three"
    18..35 Standard([9, 11])
      19..28 TableCell([8])
        19..27 "s"
      28..34 TableCell([])
