crates/org-parser/snapshots/org_rust_parser__element__table__tests__table_markup_1.snap
---
source: crates/org-parser/src/element/table.rs
expression: "$crate :: test_util :: snapshot_text(parser)"
---
"\n|one|tw *o*                                      |\n|three|four|\n"
0..65 [1, 2]
  0..1 BlankLine
  1..65 Table { rows: 2, cols: 2, children: [10, 15], caption: None }
    1..52 Standard([4, 9])
      2..6 TableCell([3])
        2..5 "one"
      6..51 TableCell([7, 6])
        6..9 "tw "
        9..12 Bold([5])
          10..11 "o"
    52..65 Standard([12, 14])
      53..59 TableCell([11])
        53..58 "three"
      59..64 TableCell([13])
        59..63 "four"
