crates/org-parser/snapshots/org_rust_parser__element__table__tests__table_no_nl.snap
---
source: crates/org-parser/src/element/table.rs
description: |+
  
  |one|two
  |three|four

---
0..23 [1, 2, 13]
  0..1 BlankLine
  1..22 Table { rows: 2, cols: 2, children: [7, 12], caption: None }
    1..10 Standard([4, 6])
      2..6 TableCell([3])
        2..5 "one"
      6..9 TableCell([5])
        6..9 "two"
    10..22 Standard([9, 11])
      11..17 TableCell([8])
        11..16 "three"
      17..21 TableCell([10])
        17..21 "four"
  22..23 BlankLine
