crates/org-parser/snapshots/org_rust_parser__element__table__tests__table_uneven_cols.snap
---
source: crates/org-parser/src/element/table.rs
expression: "$crate :: test_util :: snapshot_text(parser)"
---
"\n|one two |three|||||\n|s       |     |\n"
0..39 [1, 2]
  0..1 BlankLine
  1..39 Table { rows: 2, cols: 6, children: [11, 16], caption: None }
    1..22 Standard([4, 6, 7, 8, 9, 10])
      2..11 TableCell([3])
        2..10 "one two"
      11..17 TableCell([5])
        11..16 "three"
      17..18 TableCell([])
      18..19 TableCell([])
      19..20 TableCell([])
      20..21 TableCell([])
    22..39 Standard([13, 15])
      23..32 TableCell([12])
        23..31 "s"
      32..38 TableCell([])
